@@ -1,3 +1,7 @@
+2011-11-28  Valek Filippov
+
+		* DOC: parse FcLcb2k*
+
 2011-11-27  Valek Filippov
 
 		* DOC: parse FcLcb97
